# rust_jira_rest_api

./: .env  Cargo.toml  README.md
src/: jira.rs  jira_struct.rs  main.rs
