[package]
name = "rust_jira"
version = "0.1.0"
authors =["jga"]
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0" , features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
chrono = "0.4"
dotenv = "0.15.0"
